# mus

./: .gitignore  .gitsigners  CLAUDE.md  DOCUMENTATION.md  LICENSE  MANGO_FILTER_FIX.md  Makefile  README.bds.md  README.md  TEST_FIXES_SUMMARY.md  TEST_SUMMARY.md  go.mod  go.sum  install.sh  mus  mus-hist  mus.nim  mus_cli_search.py  mus_config.py  mus_db.py  mus_macro.py  mus_util.py  pyproject.toml  setup.cfg  test.ipynb  tox.ini
.forgejo/workflows/: ci.yaml
apptainer/: Build  Makefile
cmd/mus/: main.go
doc/: quickstart.md
docs/: README.md  cli-reference.md  concepts.md  configuration.md  developer-guide.md  eln-plugin.md  index.md  installation.md  irods-plugin.md  quickstart.md  workflows.md
internal/cli/: check.go  completion_install.go  config.go  eln.go  eln_stage2.go  eln_test.go  irods.go  irods_folder.go  irods_login.go  irods_meta.go  irods_scan.go  irods_test.go  root.go  s3.go  secret.go  tag.go  upgrade.go  verify.go  version.go
internal/config/: config.go  config_test.go
internal/dataproject/: dataproject.go  dataproject_test.go
internal/defaults/: defaults.go
internal/eln/: eln.go  eln_test.go
internal/elnmap/: elnmap.go  elnmap_test.go
internal/envformat/: envformat.go  envformat_test.go
internal/folder/: archive.go  archive_test.go  folder.go  folder_test.go
internal/hashcache/: hashcache.go  hashcache_test.go
internal/irodscache/: cache.go  cache_test.go
internal/iron/: iron.go
internal/secret/: secret.go  secret_test.go
internal/sidecar/: sidecar.go  sidecar_test.go
internal/signing/: verify.go  verify_test.go
mus/: config.py  db.py  hooks.py
mus/cli/: __init__.py  db.py  files.py  hist.py  irods.py  macro.py  search.py
mus/macro/: __init__.py  elements.py  executors.py  job.py
mus/plugins/: iotracker.py  job_run_check.py
mus/util/: __init__.py  files.py  log.py  ssp.py
scripts/: next-version.sh  publish-release.sh
src/mus/: __about__.py  __init__.py  config.py  db.py  eln.py  exceptions.py  hooks.py
src/mus/cli/: __init__.py  config.py  db.py  eln.py  files.py  log.py  search.py
src/mus/macro/: __init__.py  job.py
src/mus/plugins/: iotracker.py  job_run_check.py
src/mus/util/: __init__.py  (+3 more)
test/: conftest.py  test_cli_extended.py  test_config.py  test_db.py  test_eln_util.py  test_exceptions.py  test_files.py  test_hooks.py  test_invoke.py  test_macro.py  test_mango_filtering.py  test_util_files.py
test/data/: file_list  other01.txt  other02.txt  test.txt
tmp/: ManGO-demo.ipynb  ManGO-demo2.ipynb  ManGO-exercise.ipynb
(+9 files in other folders)
