[project]
name = "mus"
authors = [
    { name="Mark Fiers", email="mark.fiers@kuleuven.be" }, ]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", ]
dynamic = [
    "version", ]
dependencies = [
    "colorama",
    "jinja2",
    "rich",
    "click"]

[project.optional-dependencies]
dev = ["pytest"]
eln = ["nbconvert", "ipython", "requests", "fpdf"]

[project.scripts]
mus = "mus.cli:cli"

[project.urls]
Homepage = "https://github.com/mfiers/mus"
Issues = "https://github.com/mfiers/mus/issues "

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mus/__about__.py"
