[project]
name = "mus"
authors = [
    { name="Mark Fiers", email="mark.fiers@kuleuven.be" }, ]
readme = "README.md"
description = "Set of random utilities of MF"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", ]
dynamic = [
    "version", ]
dependencies = [
    "colorama",
    "jinja2",
    "rich",
    "keyring",
    "keyrings.alt",
    "click"]

[project.optional-dependencies]
dev = ["pytest"]
eln = ["nbconvert", "ipython", "requests"]
irods = ["python-irodsclient", "mango-mdschema"]
all = ["nbconvert", "ipython", "requests", "python-irodsclient", "mango-mdschema"]


[project.scripts]
mus = "mus.cli:cli"

[project.urls]
Homepage = "https://github.com/mfiers/mus"
Issues = "https://github.com/mfiers/mus/issues "

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mus/__about__.py"

#[tool.hatch.build.targets.wheel]
#only-include = ["src/mus/plugins/irods/data", "md_schema.json"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"scripts" = "mypackage/scripts"