[metadata]
name = mus
author = Mark Fiers
author_email = mark.fiers.42@gmail.com
version = file: mus/VERSION.txt
classifiers =
    Programming Language :: Python :: 3

[options]
packages = mus,mus.cli,mus.macro,mus.util
include_package_data = True
python_requires = >=3.8
install_requires =
    click
    colorama
    Jinja2
    importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
    mus = mus.cli:cli
    mus-hist = mus.cli.hist:cli